Ported the web-login code to use fewer external libraries. Removed said libraries as a result.